--- a/css/bilibili.css
+++ b/css/bilibili.css
@@ -1,6 +1,7 @@
 * {
   margin: 0;
   padding: 0;
+  border-radius: 0.03rem;
 }
 .icon {
   width: 1em;
@@ -9,17 +10,32 @@
   fill: currentColor;
   overflow: hidden;
 }
-html {
-  font-size: 5.2631578947368vw;
+@media screen and (max-width:1150px) {
+
+  html {
+    font-size: 60px;
+  }
+
+}
+@media screen and (min-width:1150px) {
+  html {
+    font-size: 5.2631578947368vw;
+  }
+  body {
+    font-size: 0.16rem;
+  }  
 }
 body {
   font-size: 0.16rem;
 }  
 ul li {
   list-style: none;
-}        
+}     
+.header {
+  width: 18.745rem;
+}   
 .header .head {
-  width: 100%;
+  width: 18.745rem;
   height: 1.95rem;
   background-image: url(../images/background_header.png);
   background-repeat: no-repeat;
@@ -90,8 +106,207 @@ ul li {
 .header .head .menu .user_menu .user {
   height: 0.45rem;
   width: 0.45rem;
+  position: relative;
+}
+.header .head .menu .user_menu .hover {
+  position: absolute;
+  height: 0.45rem;
+  width: 0.55rem;
+  left: 50%;
+  transform: translateX(-50%);
+}
+.header .head .menu .user_menu .user .img {
+  height: 0.45rem;
+  width: 0.45rem;
+  position: absolute;
+  z-index: 2;
   border-radius: 50%;
+  background-image: url(../images/user.jpg);
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  transition: 0.2s;
+}
+.header .head .menu .user_menu .user .img:hover,
+.header .head .menu .user_menu .user .hover:hover~.img {
+  transform: scale(2) translateY(65%);
+}
+.header .head .menu .user_menu .user .user_data {
+  width: 3.5rem;
+  height: 7.8rem;
+  position: absolute;
+  left: 50%;
+  top: 100%;
+  transform: translateX(-50%) translateY(0.3rem);
   background-color: white;
+  z-index: 0;
+  transition-delay: 0.15s;
+  color: black;
+  opacity: 0;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  flex-direction: column;
+}
+.header .head .menu .user_menu .user.vip .user_data .resource span {
+  font-size: 0.2rem;
+}
+.header .head .menu .user_menu .user .img:hover~.user_data,
+.header .head .menu .user_menu .user .hover:hover~.user_data {
+  opacity: 1;
+  z-index: 1;
+}
+.header .head .menu .user_menu .user .user_data .user_name {
+  margin-top: 0.55rem;
+  font-size: 0.22rem;
+  font-weight: bold;
+  text-align: center;
+  line-height: 0.22rem;
+}
+.header .head .menu .user_menu .user .user_data .vip {
+  height: 0.22rem;
+  width: 0.8rem;
+  background-color: rgb(251, 114, 153);
+  font-size: 0.16rem;
+  color: white;
+  text-align: center;
+  line-height: 0.22rem;
+  margin-top: 0.1rem;
+  display: none;
+}
+.header .head .menu .user_menu .user.vip .user_data .vip {
+  display: block;
+}
+.header .head .menu .user_menu .user .user_data .level {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  flex-direction: column;
+}
+.header .head .menu .user_menu .user .user_data .level>div:nth-of-type(1) {
+  width: 3rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.header .head .menu .user_menu .user .user_data .level div:nth-of-type(1) span:nth-of-type(2) {
+  font-size: 0.16rem;
+  color: rgb(153, 153, 153);
+}
+.header .head .menu .user_menu .user .user_data .level .all {
+  width: 3rem;
+  height: 0.02rem;
+  background-color: rgb(238, 238, 238);
+  margin-top: 0.15rem;
+}
+.header .head .menu .user_menu .user .user_data .level .now {
+  width: 2.2rem;
+  height: 0.02rem;
+  background-color: rgb(243, 203, 133);
+}
+.header .head .menu .user_menu .user .user_data .resource {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 3rem;
+  font-size: 0.3rem;
+  margin-top: 0.25rem;
+}
+.header .head .menu .user_menu .user .user_data .resource>div {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.header .head .menu .user_menu .user .user_data .resource>div:nth-of-type(2) {
+  margin-right: 0.9rem;
+}
+.header .head .menu .user_menu .user .user_data .resource .bind {
+  color: rgb(115, 201, 229);
+}
+.header .head .menu .user_menu .user .user_data .resource .bind svg:nth-of-type(1) {
+  font-size: 0.26rem;
+}
+.header .head .menu .user_menu .user .user_data .state {
+  width: 3.5rem;
+  height: 0.7rem;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  box-sizing: border-box;
+  border-top: 1px solid rgb(183, 183, 183);
+  border-bottom: 1px solid rgb(183, 183, 183);
+  margin-top: 0.2rem;
+}
+.header .head .menu .user_menu .user .user_data .state div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  font-size: 0.16rem;
+  color: rgb(153, 153, 153);
+}
+.header .head .menu .user_menu .user .user_data .state div span {
+  font-size: 0.2rem;
+  font-weight: bold;
+  color: black;
+}
+.header .head .menu .user_menu .user .user_data .menu {
+  display: flex;
+  justify-content: start;
+  align-items: flex-start;
+  flex-direction: column;
+  height: 3.3rem;
+}
+.header .head .menu .user_menu .user .user_data .menu div {
+  color: rgb(153, 153, 153);
+  font-size: 0.25rem;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  margin-left: 0.35rem;
+  margin-top: 0.25rem;
+}
+.header .head .menu .user_menu .user .user_data .menu div span {
+  color: black;
+  font-size: 0.18rem;
+}
+.header .head .menu .user_menu .user .user_data .language {
+  width: 3.5rem;
+  height: 0.75rem;
+  box-sizing: border-box;
+  border-top: 1px solid rgb(183, 183, 183);
+  border-bottom: 1px solid rgb(183, 183, 183);
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  font-size: 0.2rem;
+  color: rgb(153, 153, 153);
+}
+.header .head .menu .user_menu .user .user_data .language svg {
+  margin-left: 0.35rem;
+}
+.header .head .menu .user_menu .user .user_data .language span {
+  margin-left: 0.1rem;
+  color: black;
+}
+.header .head .menu .user_menu .user .user_data .language svg:nth-of-type(2) {
+  margin-left: 1.1rem;
+}
+.header .head .menu .user_menu .user .user_data .quit {
+  width: 3.5rem;
+  height: 0.7rem;
+  margin-top: 0.05rem;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  font-size: 0.2rem;
+  color: rgb(153, 153, 153);
+}
+.header .head .menu .user_menu .user .user_data .quit svg {
+  margin-left: 0.35rem;
+}
+.header .head .menu .user_menu .user .user_data .quit span {
+  margin-left: 0.1rem;
+  color: black;
 }
 .header .head .menu .user_menu ul {
   display: flex;
@@ -130,6 +345,9 @@ ul li {
   flex-direction: column;
   align-items: center;
 }
+.header .menus .menu_1 li:hover span {
+  color: rgb(115, 201, 229);
+}
 .header .menus .menu_1 li>div {
   width: 0.45rem;
   height: 0.45rem;
@@ -154,7 +372,7 @@ ul li {
   background-color: #5cc172;
 }
 .header .menus .menu_2 {
-  width: 9.5rem;
+  width: 10.5rem;
   height: 0.6rem;
   display: flex;
   justify-content: space-around;
@@ -166,12 +384,16 @@ ul li {
   border-right: 0.01rem solid #e8e8e8;
 }
 .header .menus .menu_2 li {
-  width: 0.75rem;
+  width: 0.8rem;
   height: 0.2rem;
   margin-left: 0.1rem;
   display: flex;
   align-items: center;
   justify-content: flex-start;
+  position: relative;
+}
+.header .menus .menu_2 li div:nth-of-type(1):hover {
+  color: rgb(115, 201, 229);
 }
 .header .menus .menu_2 li:nth-of-type(8),
 .header .menus .menu_2 li:nth-of-type(9),
@@ -183,19 +405,92 @@ ul li {
 .header .menus .menu_2 li:nth-of-type(20) {
   width: 1.15rem;
 }
-.header .menus .menu_2 li div:nth-of-type(1) {
+.header .menus .menu_2 li>div:nth-of-type(1) {
   font-size: 0.2rem;
 }
-.header .menus .menu_2 li div:nth-of-type(2) {
+.header .menus .menu_2 li>div:nth-of-type(2) {
   width: 0.35rem;
-  height: 0.15rem;
+  height: 0.16rem;
   background-color: rgb(115, 201, 229);
   border-radius: 0.03rem;
-  font-size: 0.08rem;
+  font-size: 0.rem;
   color: white;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+.header .menus .menu_2 li .option {
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: white;
+  z-index: 10;
+  height: 1.9rem;
+  display: flex;
+  justify-content: start;
+  align-items: flex-start;
+  box-shadow: 0 0 0.02rem 0.02rem rgba(0, 0, 0, 0.1);
+  opacity: 0;
+  transition: 0.2s linear;
+}
+.header .menus .menu_2 li .option.above {
+  transform: translateY(-100%) translateX(-0.2rem) translateY(-0.3rem);
+}
+.header .menus .menu_2 li .option.below {
+  transform: translateY(0.5rem) translateX(-0.2rem);
+}
+.header .menus .menu_2 li .option.r2 {
+  height: 0.95rem;
+}
+.header .menus .menu_2 li .option.r3 {
+  height: 1.425rem;
+}
+.header .menus .menu_2 li div:nth-of-type(1):hover~.option.above,
+.header .menus .menu_2 li div:nth-of-type(2):hover~.option.above {
+  transform: translateY(-100%) translateX(-0.2rem) translateY(-0.25rem);
+  opacity: 1;
+} 
+.header .menus .menu_2 li div:nth-of-type(1):hover~.option.below,
+.header .menus .menu_2 li div:nth-of-type(2):hover~.option.below {
+  transform: translateY(0.55rem) translateX(-0.2rem);
+  opacity: 1;
+} 
+.header .menus .menu_2 li .option::after {
+  content: "";
+  width: 0.1rem;
+  height: 0.1rem;
+  position: absolute;
+  box-shadow: 0.02rem 0.02rem 0.02rem 0 rgba(0, 0, 0, 0.1);
+  background-color: white;
+}
+.header .menus .menu_2 li .option.above::after {
+  transform: translateX(-50%) translateY(-50%) translateX(0.4rem) rotate(45deg);
+  top: 100%;
+  left: 0;
+}
+.header .menus .menu_2 li .option.below::after {
+  transform: translateX(-50%) translateY(-50%) translateX(0.4rem) rotate(225deg);
+  top: 0;
+  left: 0;
+}
+.header .menus .menu_2 li .option>div {
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  flex-wrap: wrap;
+  align-items: flex-start;
+  height: 1.9rem;
+}
+.header .menus .menu_2 li .option.r2>div {
+  height: 0.95rem;
+}
+.header .menus .menu_2 li .option.r3>div {
+  height: 1.425rem;
+}
+.header .menus .menu_2 li .option>div div {
+  font-size: 0.16rem;
+  white-space: nowrap;
+  margin: 0.1rem 0.15rem;
 }
 .header .menus .menu_3 {
   width: 2.9rem;
@@ -210,6 +505,9 @@ ul li {
 .header .menus .menu_3 li {
   margin-right: 0.2rem;
 }
+.header .menus .menu_3 li:hover span {
+  color: rgb(115, 201, 229);
+}
 .header .recommend {
   width: 15rem;
   height: 3rem;
@@ -221,9 +519,140 @@ ul li {
 .header .recommend .advertisement {
   width: 6.9rem;
   height: 3rem;
-  background-color: blue;
+  position: relative;
+  overflow: hidden;
 }
-.header .recommend .vedio {
+.header .recommend .advertisement input:nth-of-type(1):checked~div:nth-of-type(1) {
+  animation-name: show;
+  animation-duration: 0.1s;
+  animation-fill-mode: forwards;
+  z-index: 1;
+}
+.header .recommend .advertisement input:nth-of-type(2):checked~div:nth-of-type(2) {
+  animation-name: show;
+  animation-duration: 0.1s;
+  animation-fill-mode: forwards;
+  z-index: 1;
+}
+.header .recommend .advertisement input:nth-of-type(3):checked~div:nth-of-type(3) {
+  animation-name: show;
+  animation-duration: 0.1s;
+  animation-fill-mode: forwards;
+  z-index: 1;
+}
+.header .recommend .advertisement input:nth-of-type(4):checked~div:nth-of-type(4) {
+  animation-name: show;
+  animation-duration: 0.1s;
+  animation-fill-mode: forwards;
+  z-index: 1;
+}
+.header .recommend .advertisement input:nth-of-type(1):checked~label:nth-of-type(1) svg{
+  transform: scale(1.8);
+}
+.header .recommend .advertisement input:nth-of-type(2):checked~label:nth-of-type(2) svg{
+  transform: scale(1.8);
+}
+.header .recommend .advertisement input:nth-of-type(3):checked~label:nth-of-type(3) svg{
+  transform: scale(1.8);
+}
+.header .recommend .advertisement input:nth-of-type(4):checked~label:nth-of-type(4) svg{
+  transform: scale(1.8);
+}
+
+@keyframes show {
+  0% {
+    transform: rotateZ(90deg);
+  }
+  100% {
+    transform: rotateZ(0deg);
+  }
+}
+.header .recommend .advertisement div {
+  width: 6.9rem;
+  height: 3rem;
+  position: absolute;
+  top: 0;
+  left: 0;
+  transform-origin: 0 100%;
+  animation-name: hide;
+  animation-duration: 0.4s;
+  animation-fill-mode: forwards;
+  animation-timing-function: linear;
+  z-index: 2;
+}
+@keyframes hide {
+  0% {
+    transform: rotateZ(0deg);
+  }
+  99.99% {
+    transform: rotateZ(-90deg);
+  }
+  100% {
+    transform: rotateZ(-270deg);
+  }
+}
+.header .recommend .advertisement div:nth-of-type(1) {
+  background-color: aqua;
+  transform: rotateZ(0) translateZ(5px);
+}
+.header .recommend .advertisement div:nth-of-type(2) {
+  background-color: lemonchiffon;
+  transform: rotateZ(0);
+}
+.header .recommend .advertisement div:nth-of-type(3) {
+  background-color: coral;
+  transform: rotateZ(0);
+}
+.header .recommend .advertisement div:nth-of-type(4) {
+  background-color: burlywood;
+  transform: rotateZ(0);
+}
+.header .recommend .advertisement span {
+  box-sizing: content-box;
+  width: 0.15rem;
+  height: 0.15rem;
+  border-radius: 50%;
+  background-color: white;
+  position: absolute;
+  z-index: 2;
+  transform-origin: 50% 50%;
+  transition: 0.02s;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: rgb(0, 161, 214);
+  text-shadow: 0 0 0.02rem 0.02rem white;
+}
+.header .recommend .advertisement span svg {
+  transform: scale(0);
+}
+.header .recommend .advertisement span:hover {
+  border: 0.04rem solid white;
+  background-color: rgb(115, 201, 229);
+  position: absolute;
+  z-index: 2;
+}
+.header .recommend .advertisement label:nth-of-type(1) span {
+  bottom: 0.15rem;
+  right: 0.2rem;
+  transform: translateX(50%) translateY(50%);
+}
+.header .recommend .advertisement label:nth-of-type(2) span {
+  bottom: 0.15rem;
+  right: 0.5rem;
+  transform: translateX(50%) translateY(50%);
+}
+.header .recommend .advertisement label:nth-of-type(3) span {
+  bottom: 0.15rem;
+  right: 0.8rem;
+  transform: translateX(50%) translateY(50%);
+}
+.header .recommend .advertisement label:nth-of-type(4) span {
+  bottom: 0.15rem;
+  right: 1.1rem;
+  transform: translateX(50%) translateY(50%);
+}
+.header .recommend .vedios {
   display: flex;
   justify-content: space-between;
   align-content: center;
@@ -231,11 +660,95 @@ ul li {
   align-content: space-between;
   width: 8rem;
   height: 3rem;
+  position: relative;
 }
-.header .recommend .vedio div {
+.header .recommend .vedios .turn {
+  position: absolute;
+  font-size: 0.32rem;
+  width: 0.4rem;
+  height: 0.9rem;
+  display: none;
+  background-color: rgba(0, 0, 0, 0.4);
+  z-index: 1;
+  color: white;
+  transform-origin: 50% 50%;
+  top: 50%;
+}
+.header .recommend .vedios:hover .turn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.header .recommend .vedios .turn.left {
+  left: 0;
+  transform: translateY(-50%) rotate(180deg);
+}
+.header .recommend .vedios .turn.right {
+  right: 0;
+  transform: translateY(-50%);
+}
+.header .recommend .vedios>.vedio {
   width: 2.6rem;
   height: 1.45rem;
   background-color: #5cc172;
+  overflow: hidden;
+  position: relative;
+}
+.header .recommend .vedios>.vedio .mask {
+  width: 2.6rem;
+  height: 2.5rem;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0);
+  color: white;
+  transform: translateY(-0.35rem);
+  transition: 0.2s linear;
+}
+.header .recommend .vedios>.vedio:hover .mask {
+  background-color: rgba(0, 0, 0, 0.4);
+  transform: translateY(-1.05rem);
+}
+.header .recommend .vedios>.vedio .mask .title {
+  margin-top: 1.4rem;
+  margin-left: 0.1rem;
+  width: 2.25rem;
+  font-size: 0.22rem;
+  line-height: 0.25rem;
+  height: 0.23rem;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+.header .recommend .vedios>.vedio:hover .mask .title {
+  height: 0.45rem;
+  white-space: normal;
+  overflow: visible;
+}
+.header .recommend .vedios>.vedio .mask .up {
+  margin-left: 0.1rem;
+  margin-top: 0.05rem;
+  font-size: 0.22rem;
+  opacity: 0;
+}
+.header .recommend .vedios>.vedio:hover .mask .up {
+  opacity: 1;
+}
+.header .recommend .vedios>.vedio .mask .up span {
+  font-size: 0.16rem;
+  line-height: 0.16rem;
+}
+.header .recommend .vedios>.vedio .mask .view {
+  margin-left: 0.1rem;
+  margin-top: 0.05rem;
+  font-size: 0.16rem;
+  opacity: 0;
+}
+.header .recommend .vedios>.vedio:hover .mask .view {
+  opacity: 1;
+}
+.body {
+  width: 18.745rem;
 }
 .body .partition {
   width: 15rem;
@@ -268,11 +781,12 @@ ul li {
   align-items: center;
 }
 .body .partition.animation .title .update_time li {
-  width: 0.36rem;
+  width: 0.45rem;
   height: 0.3rem;
   font-size: 0.18rem;
   margin-left: 0.30rem;
   box-sizing: border-box;
+  border-radius: 0;
 }
 .body .partition.animation .title .update_time li.now {
   color: rgb(0, 161, 214);
@@ -538,7 +1052,7 @@ ul li {
 }
 .footer {
   height: 6.4rem;
-  width: 100%;
+  width: 18.745rem;
   background-color: rgb(246, 249, 250);
 }
 .footer .menu {
