--- a/css/bilibili.css
+++ b/css/bilibili.css
@@ -235,6 +235,7 @@ ul li {
   border-top: 1px solid rgb(183, 183, 183);
   border-bottom: 1px solid rgb(183, 183, 183);
   margin-top: 0.2rem;
+  border-radius: 0;
 }
 .header .head .menu .user_menu .user .user_data .state div {
   display: flex;
@@ -280,6 +281,7 @@ ul li {
   align-items: center;
   font-size: 0.2rem;
   color: rgb(153, 153, 153);
+  border-radius: 0;
 }
 .header .head .menu .user_menu .user .user_data .language svg {
   margin-left: 0.35rem;
@@ -388,11 +390,14 @@ ul li {
   height: 0.2rem;
   margin-left: 0.1rem;
   display: flex;
+  flex-direction: row-reverse;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: flex-end;
   position: relative;
 }
-.header .menus .menu_2 li div:nth-of-type(1):hover {
+.header .menus .menu_2 li div:nth-of-type(2):hover,
+.header .menus .menu_2 li div:nth-of-type(1):hover~div:nth-of-type(2)
+ {
   color: rgb(115, 201, 229);
 }
 .header .menus .menu_2 li:nth-of-type(8),
@@ -405,10 +410,10 @@ ul li {
 .header .menus .menu_2 li:nth-of-type(20) {
   width: 1.15rem;
 }
-.header .menus .menu_2 li>div:nth-of-type(1) {
+.header .menus .menu_2 li>div:nth-of-type(2) {
   font-size: 0.2rem;
 }
-.header .menus .menu_2 li>div:nth-of-type(2) {
+.header .menus .menu_2 li>div:nth-of-type(1) {
   width: 0.35rem;
   height: 0.16rem;
   background-color: rgb(115, 201, 229);
@@ -749,6 +754,7 @@ ul li {
 }
 .body {
   width: 18.745rem;
+  position: relative;
 }
 .body .partition {
   width: 15rem;
@@ -774,6 +780,20 @@ ul li {
 .body .partition .title .update_time {
   display: none;
 }
+.body .partition .title .update_time input {
+  display: none;
+}
+.body .partition .title .update_time input:nth-of-type(1):checked~label:nth-of-type(1) li,
+.body .partition .title .update_time input:nth-of-type(2):checked~label:nth-of-type(2) li,
+.body .partition .title .update_time input:nth-of-type(3):checked~label:nth-of-type(3) li,
+.body .partition .title .update_time input:nth-of-type(4):checked~label:nth-of-type(4) li,
+.body .partition .title .update_time input:nth-of-type(5):checked~label:nth-of-type(5) li,
+.body .partition .title .update_time input:nth-of-type(6):checked~label:nth-of-type(6) li,
+.body .partition .title .update_time input:nth-of-type(7):checked~label:nth-of-type(7) li,
+.body .partition .title .update_time input:nth-of-type(8):checked~label:nth-of-type(8) li {
+  color: rgb(0, 161, 214);
+  border-bottom: 1px solid rgb(0, 161, 214);
+}
 .body .partition.animation .title .update_time {
   display: block;
   display: flex;
@@ -787,10 +807,7 @@ ul li {
   margin-left: 0.30rem;
   box-sizing: border-box;
   border-radius: 0;
-}
-.body .partition.animation .title .update_time li.now {
-  color: rgb(0, 161, 214);
-  border-bottom: 1px solid rgb(0, 161, 214);
+  text-align: center;
 }
 .body .partition .title span{
   font-size: 0.26rem;
@@ -1049,6 +1066,66 @@ ul li {
 .body .partition.essay .article .box .describe div {
   font-size: 0.16rem;
   color: rgb(183, 183, 183);
+}
+.body .slider {
+  position: absolute;
+  margin-top: 3.3rem;
+  top: -6.8rem;
+  right: 1.4rem;
+}
+.body .slider .head {
+  font-size: 0.35rem;
+  font-weight: bold;
+  position: absolute;
+  transform: translateX(-50%) translateY(-50%) translateX(0.35rem) translateY(-0.03rem) rotate(90deg);
+}
+.body .slider .body {
+  position: absolute;
+  width: 0.7rem;
+  height: 7.25rem;
+  border-radius: 0.1rem;
+  border: 1px solid rgb(213, 213, 213);
+  background-color: white;
+  z-index: 1;
+  box-shadow: 0 0 0.02rem 0.02rem rgb(213, 213, 213);
+}
+.body .slider .body .menu {
+  height: 6.45rem;
+  width: 0.7rem;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  flex-direction: column;
+  font-size: 0.18rem;
+  overflow: hidden;
+  margin: 0 auto;
+}
+.body .slider .body .menu li {
+  margin-top: 0.1rem;
+}
+.body .slider .body .setting {
+  width: 100%;
+  height: 0.4rem;
+  box-sizing: border-box;
+  border-top: 0.01rem solid rgb(153, 153, 153);
+  border-bottom: 0.01rem solid rgb(153, 153, 153);
+  border-radius: 0;
+  margin-top: 0.05rem;
+  font-size: 0.22rem;
+  text-align: center;
+  line-height: 0.38rem;
+  color: rgb(153, 153, 153);
+}
+.body .slider .body .to_top {
+  height: 0.36rem;
+  font-size: 0.22rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: rgb(153, 153, 153);
+}
+.body .slider .body .to_top svg {
+  transform: rotate(-90deg);
 }
 .footer {
   height: 6.4rem;
