--- a/css/bilibili.css
+++ b/css/bilibili.css
@@ -98,6 +98,9 @@ ul li {
   outline: none;
   margin-left: 0.2rem;
 }
+.header .head .menu .search input::placeholder {
+  font-size: 0.18rem;
+}
 .header .head .menu .user_menu {
   display: flex;
   justify-content: space-evenly;
@@ -107,6 +110,7 @@ ul li {
   height: 0.45rem;
   width: 0.45rem;
   position: relative;
+  overflow: hidden;
 }
 .header .head .menu .user_menu .hover {
   position: absolute;
@@ -384,6 +388,7 @@ ul li {
   padding-right: 0.1rem;
   border-left: 0.01rem solid #e8e8e8;
   border-right: 0.01rem solid #e8e8e8;
+  overflow: hidden;
 }
 .header .menus .menu_2 li {
   width: 0.8rem;
@@ -395,8 +400,8 @@ ul li {
   justify-content: flex-end;
   position: relative;
 }
-.header .menus .menu_2 li div:nth-of-type(2):hover,
-.header .menus .menu_2 li div:nth-of-type(1):hover~div:nth-of-type(2)
+.header .menus .menu_2 li>div:nth-of-type(2):hover,
+.header .menus .menu_2 li>div:nth-of-type(1):hover~div:nth-of-type(2)
  {
   color: rgb(115, 201, 229);
 }
@@ -436,13 +441,13 @@ ul li {
   align-items: flex-start;
   box-shadow: 0 0 0.02rem 0.02rem rgba(0, 0, 0, 0.1);
   opacity: 0;
-  transition: 0.2s linear;
+  transition: 0.4s linear;
 }
 .header .menus .menu_2 li .option.above {
   transform: translateY(-100%) translateX(-0.2rem) translateY(-0.3rem);
 }
 .header .menus .menu_2 li .option.below {
-  transform: translateY(0.5rem) translateX(-0.2rem);
+  transform: translateY(0.55rem) translateX(-0.2rem);
 }
 .header .menus .menu_2 li .option.r2 {
   height: 0.95rem;
@@ -450,14 +455,17 @@ ul li {
 .header .menus .menu_2 li .option.r3 {
   height: 1.425rem;
 }
-.header .menus .menu_2 li div:nth-of-type(1):hover~.option.above,
-.header .menus .menu_2 li div:nth-of-type(2):hover~.option.above {
+.header .menus .menu_2 li .option div div:hover {
+  color: rgb(115, 201, 229);
+}
+.header .menus .menu_2 li>div:nth-of-type(1):hover~.option.above,
+.header .menus .menu_2 li>div:nth-of-type(2):hover~.option.above {
   transform: translateY(-100%) translateX(-0.2rem) translateY(-0.25rem);
   opacity: 1;
 } 
-.header .menus .menu_2 li div:nth-of-type(1):hover~.option.below,
-.header .menus .menu_2 li div:nth-of-type(2):hover~.option.below {
-  transform: translateY(0.55rem) translateX(-0.2rem);
+.header .menus .menu_2 li>div:nth-of-type(1):hover~.option.below,
+.header .menus .menu_2 li>div:nth-of-type(2):hover~.option.below {
+  transform: translateY(0.5rem) translateX(-0.2rem);
   opacity: 1;
 } 
 .header .menus .menu_2 li .option::after {
@@ -572,7 +580,7 @@ ul li {
     transform: rotateZ(0deg);
   }
 }
-.header .recommend .advertisement div {
+.header .recommend .advertisement>div {
   width: 6.9rem;
   height: 3rem;
   position: absolute;
@@ -584,6 +592,11 @@ ul li {
   animation-fill-mode: forwards;
   animation-timing-function: linear;
   z-index: 2;
+  box-sizing: border-box;
+  padding: 0.15rem;
+  display: flex;
+  justify-content: end;
+  align-items: flex-end;
 }
 @keyframes hide {
   0% {
@@ -596,21 +609,25 @@ ul li {
     transform: rotateZ(-270deg);
   }
 }
-.header .recommend .advertisement div:nth-of-type(1) {
+.header .recommend .advertisement>div:nth-of-type(1) {
   background-color: aqua;
   transform: rotateZ(0) translateZ(5px);
 }
-.header .recommend .advertisement div:nth-of-type(2) {
+.header .recommend .advertisement>div:nth-of-type(2) {
   background-color: lemonchiffon;
   transform: rotateZ(0);
 }
-.header .recommend .advertisement div:nth-of-type(3) {
+.header .recommend .advertisement>div:nth-of-type(3) {
   background-color: coral;
   transform: rotateZ(0);
 }
-.header .recommend .advertisement div:nth-of-type(4) {
+.header .recommend .advertisement>div:nth-of-type(4) {
   background-color: burlywood;
   transform: rotateZ(0);
+}
+.header .recommend .advertisement div div {
+  font-size: 0.22rem;
+  color: white;
 }
 .header .recommend .advertisement span {
   box-sizing: content-box;
@@ -755,6 +772,7 @@ ul li {
 .body {
   width: 18.745rem;
   position: relative;
+  overflow: visible;
 }
 .body .partition {
   width: 15rem;
@@ -1080,28 +1098,41 @@ ul li {
   transform: translateX(-50%) translateY(-50%) translateX(0.35rem) translateY(-0.03rem) rotate(90deg);
 }
 .body .slider .body {
+  height: 7.25rem;
   position: absolute;
   width: 0.7rem;
-  height: 7.25rem;
   border-radius: 0.1rem;
   border: 1px solid rgb(213, 213, 213);
   background-color: white;
   z-index: 1;
   box-shadow: 0 0 0.02rem 0.02rem rgb(213, 213, 213);
+  overflow: hidden;
 }
 .body .slider .body .menu {
   height: 6.45rem;
   width: 0.7rem;
   display: flex;
-  justify-content: start;
-  align-items: center;
-  flex-direction: column;
-  font-size: 0.18rem;
+  justify-content: space-around;
+  align-items: stretch;
+  flex-direction: row;
+  flex-wrap: wrap;
   overflow: hidden;
   margin: 0 auto;
 }
-.body .slider .body .menu li {
-  margin-top: 0.1rem;
+.body .slider .body .menu a {
+  align-items: stretch;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 0;
+}
+.body .slider .body .menu a:hover {
+  background-color: rgb(115, 201, 229);
+}
+.body .slider .body .menu  a{
+  text-decoration: none;
+  color: black;
 }
 .body .slider .body .setting {
   width: 100%;
@@ -1115,6 +1146,10 @@ ul li {
   text-align: center;
   line-height: 0.38rem;
   color: rgb(153, 153, 153);
+  border-radius: 0;
+}
+.body .slider .body .setting:hover {
+  background-color: rgb(115, 201, 229);
 }
 .body .slider .body .to_top {
   height: 0.36rem;
@@ -1123,6 +1158,10 @@ ul li {
   justify-content: center;
   align-items: center;
   color: rgb(153, 153, 153);
+  border-radius: 0;
+}
+.body .slider .body .to_top:hover {
+  background-color: rgb(115, 201, 229);
 }
 .body .slider .body .to_top svg {
   transform: rotate(-90deg);
