--- a/css/bilibili.css
+++ b/css/bilibili.css
@@ -164,6 +164,11 @@ ul li {
   background-size: 100% 100%;
   background-repeat: no-repeat;
   transition: 0.2s;
+  overflow: hidden;
+}
+.header .head .menu .user_menu .user .img a div {
+  width: 0.45rem;
+  height: 0.45rem;
 }
 .header .head .menu .user_menu .user .img:hover,
 .header .head .menu .user_menu .user .hover:hover~.img {
@@ -185,6 +190,7 @@ ul li {
   justify-content: start;
   align-items: center;
   flex-direction: column;
+  box-shadow: 0 0 0.01rem 0.01rem rgb(156, 165, 173);
 }
 .header .head .menu .user_menu .user.vip .user_data .resource span {
   font-size: 0.2rem;
@@ -1394,15 +1400,51 @@ ul li {
   background-repeat: no-repeat;
   background-size: 100% 100%;
 }
-
-
-
-
-
-
-
-
-
+.body .partition:nth-of-type(6) .vedio .box:nth-of-type(1) div:nth-of-type(1) {
+  background-image: url(../images/fanjvdongtai_1.png);
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+}
+.body .partition:nth-of-type(6) .vedio .box:nth-of-type(2) div:nth-of-type(1) {
+  background-image: url(../images/fanjvdongtai_2.png);
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+}
+.body .partition:nth-of-type(6) .vedio .box:nth-of-type(3) div:nth-of-type(1) {
+  background-image: url(../images/fanjvdongtai_3.png);
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+}
+.body .partition:nth-of-type(6) .vedio .box:nth-of-type(4) div:nth-of-type(1) {
+  background-image: url(../images/fanjvdongtai_4.png);
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+}
+.body .partition:nth-of-type(6) .vedio .box:nth-of-type(5) div:nth-of-type(1) {
+  background-image: url(../images/fanjvdongtai_5.png);
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+}
+.body .partition:nth-of-type(6) .vedio .box:nth-of-type(6) div:nth-of-type(1) {
+  background-image: url(../images/fanjvdongtai_6.png);
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+}
+.body .partition:nth-of-type(6) .vedio .box:nth-of-type(7) div:nth-of-type(1) {
+  background-image: url(../images/fanjvdongtai_7.png);
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+}
+.body .partition:nth-of-type(6) .vedio .box:nth-of-type(8) div:nth-of-type(1) {
+  background-image: url(../images/fanjvdongtai_8.png);
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+}
+.body .partition:nth-of-type(6) .advertisement {
+  background-image: url(../images/fanjvdongtai_advertisement.png);
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+}
 .body .slider {
   position: absolute;
   margin-top: 3.3rem;
